crates/clinker-core/tests/snapshots/pre_lift_baselines__explain_aggregate_windowed.snap
---
source: crates/clinker-core/tests/pre_lift_baselines.rs
assertion_line: 360
expression: text
---
=== Execution Plan ===

Mode: Streaming
Indices to build: 0
Transforms: 1
Output projections: 1
DAG nodes: 4

Source DAG:
  Tier 0: sales

Transform 'active_only':
  Parallelism: Sequential
  Window index: None
  Partition lookup: None

=== Physical Properties ===

source.sales:
  ordering: <none>
  ordering_provenance: NoOrdering
  partitioning: Single
  partitioning_provenance: SingleStream
  buffer: streaming

transform.active_only:
  ordering: <none>
  ordering_provenance: DestroyedByDistinct { at_node: "active_only", confidence: Proven }
  partitioning: Single
  partitioning_provenance: SingleStream
  buffer: materialized

aggregation.by_dept:
  ordering: 
  ordering_provenance: IntroducedByStreamingAggregate { at_node: "by_dept", enabled_by: DestroyedByDistinct { at_node: "active_only", confidence: Proven } }
  partitioning: Single
  partitioning_provenance: SingleStream
  buffer: materialized

output.dept_totals:
  ordering: <none>
  ordering_provenance: NoOrdering
  partitioning: Single
  partitioning_provenance: SingleStream
  buffer: streaming

=== CXL Expressions ===

Transform 'active_only':
  filter status == "active"
  distinct by id
  emit id = id
  emit dept = dept
  emit amount = amount
  emit status = status

Transform 'by_dept':
  emit total = sum(amount.to_int())
  emit n = count(*)

=== Type Annotations ===

Transform 'active_only': (types inferred at compile time)

=== Memory Budget ===

Memory limit: default
Worker threads: 4

=== DAG Topology ===

  ● [source] sales (line:5)
  │ [transform] active_only (line:19)
  ◇ [aggregation:streaming] by_dept (line:31)
  │ [output] dept_totals (line:40)
