crates/clinker-core/tests/snapshots/pre_lift_baselines__explain_composition_pipeline.snap
---
source: crates/clinker-core/tests/pre_lift_baselines.rs
expression: scrubbed
---
=== Execution Plan ===

Mode: Streaming
Indices to build: 0
Transforms: 0
Output projections: 1
DAG nodes: 4
arbitration: BackPressurePreferred -> Priority

Source DAG:
  Tier 0: customers_src, addresses_src

=== Physical Properties ===

output.enriched_out:
  ordering: <none>
  ordering_provenance: NoOrdering
  partitioning: Single
  partitioning_provenance: SingleStream
  buffer: streaming
  arbitration: spill_priority=N/A, can_back_pressure=false, predicted_peak=0B, predicted_freed=0B

source.addresses_src:
  ordering: <none>
  ordering_provenance: NoOrdering
  partitioning: Single
  partitioning_provenance: SingleStream
  buffer: materialized
  arbitration: spill_priority=N/A, can_back_pressure=true, predicted_peak=0B, predicted_freed=0B

composition.addr_norm:
  ordering: <none>
  ordering_provenance: NoOrdering
  partitioning: Single
  partitioning_provenance: SingleStream
  buffer: materialized
  arbitration: spill_priority=N/A, can_back_pressure=false, predicted_peak=0B, predicted_freed=0B

source.customers_src:
  ordering: <none>
  ordering_provenance: NoOrdering
  partitioning: Single
  partitioning_provenance: SingleStream
  buffer: materialized
  arbitration: spill_priority=N/A, can_back_pressure=true, predicted_peak=0B, predicted_freed=0B

=== Buffer Edges ===

edge source.addresses_src -> composition.addr_norm:
  buffer: node_buffer (slot=1)
  arbitration: spill_priority=0, can_back_pressure=false, predicted_peak=0B, predicted_freed=0B (producer: source)

=== CXL Expressions ===

=== Type Annotations ===


=== Memory Budget ===

Memory limit: default
Worker threads: 4

=== DAG Topology ===

  ● [output] enriched_out (line:48)
  ● [source] addresses_src (line:17)
  │ [composition:body=<ID>] addr_norm (line:39)
  ● [source] customers_src (line:7)
