crates/clinker-core/tests/snapshots/pre_lift_baselines__explain_nested_composition_pipeline.snap
---
source: crates/clinker-core/tests/pre_lift_baselines.rs
expression: scrubbed
---
=== Execution Plan ===

Mode: Streaming
Indices to build: 0
Transforms: 0
Output projections: 1
DAG nodes: 3
arbitration: BackPressurePreferred -> Priority

Source DAG:
  Tier 0: raw_src

=== Physical Properties ===

source.raw_src:
  ordering: <none>
  ordering_provenance: NoOrdering
  partitioning: Single
  partitioning_provenance: SingleStream
  buffer: materialized
  arbitration: spill_priority=N/A, can_back_pressure=true

composition.nested_process:
  ordering: <none>
  ordering_provenance: NoOrdering
  partitioning: Single
  partitioning_provenance: SingleStream
  buffer: materialized
  arbitration: spill_priority=N/A, can_back_pressure=false

output.final_out:
  ordering: <none>
  ordering_provenance: NoOrdering
  partitioning: Single
  partitioning_provenance: SingleStream
  buffer: streaming
  arbitration: spill_priority=N/A, can_back_pressure=false

=== Buffer Edges ===

edge source.raw_src -> composition.nested_process:
  buffer: node_buffer (slot=0)
  arbitration: spill_priority=0, can_back_pressure=false (producer: source)

edge composition.nested_process -> output.final_out:
  buffer: node_buffer (slot=1)
  arbitration: spill_priority=0, can_back_pressure=false (producer: composition)

=== CXL Expressions ===

=== Type Annotations ===


=== Memory Budget ===

Memory limit: default
Worker threads: 4

=== DAG Topology ===

  ● [source] raw_src (line:7)
  │ [composition:body=<ID>] nested_process (line:20)
  │ [output] final_out (line:29)
