crates/clinker-core/tests/snapshots/pre_lift_baselines__explain_route_fanout.snap
---
source: crates/clinker-core/tests/pre_lift_baselines.rs
expression: text
---
=== Execution Plan ===

Mode: Streaming
Indices to build: 0
Transforms: 1
Output projections: 2
DAG nodes: 5
arbitration: BackPressurePreferred -> Priority

Source DAG:
  Tier 0: orders

Transform 'classify':
  Parallelism: Stateless
  Window index: None
  Partition lookup: None

=== Physical Properties ===

source.orders:
  ordering: <none>
  ordering_provenance: NoOrdering
  partitioning: Single
  partitioning_provenance: SingleStream
  buffer: streaming
  arbitration: spill_priority=N/A, can_back_pressure=true, predicted_peak=0B, predicted_freed=0B

transform.classify:
  ordering: <none>
  ordering_provenance: NoOrdering
  partitioning: Single
  partitioning_provenance: SingleStream
  buffer: materialized
  arbitration: spill_priority=N/A, can_back_pressure=false, predicted_peak=0B, predicted_freed=0B

route.classify_route:
  ordering: <none>
  ordering_provenance: NoOrdering
  partitioning: Single
  partitioning_provenance: SingleStream
  buffer: materialized
  arbitration: spill_priority=N/A, can_back_pressure=false, predicted_peak=0B, predicted_freed=0B

output.low:
  ordering: <none>
  ordering_provenance: NoOrdering
  partitioning: Single
  partitioning_provenance: SingleStream
  buffer: streaming
  arbitration: spill_priority=N/A, can_back_pressure=false, predicted_peak=0B, predicted_freed=0B

output.high:
  ordering: <none>
  ordering_provenance: NoOrdering
  partitioning: Single
  partitioning_provenance: SingleStream
  buffer: streaming
  arbitration: spill_priority=N/A, can_back_pressure=false, predicted_peak=0B, predicted_freed=0B

=== Buffer Edges ===

edge transform.classify -> route.classify_route:
  buffer: node_buffer (slot=1)
  arbitration: spill_priority=0, can_back_pressure=false, predicted_peak=0B, predicted_freed=0B (producer: transform)

edge route.classify_route -> output.low:
  buffer: node_buffer (slot=2)
  arbitration: spill_priority=0, can_back_pressure=false, predicted_peak=0B, predicted_freed=0B (producer: route)

edge route.classify_route -> output.high:
  buffer: node_buffer (slot=2)
  arbitration: spill_priority=0, can_back_pressure=false, predicted_peak=0B, predicted_freed=0B (producer: route)

Route 'classify_route' (mode: exclusive):
  Branch 'high' → output 'high'
  Default: 'low' → output 'low'

=== CXL Expressions ===

Transform 'classify':
  emit id = id
  emit amount = amount

Transform 'classify_route':

=== Type Annotations ===

Transform 'classify': (types inferred at compile time)

=== Memory Budget ===

Memory limit: default
Worker threads: 4

=== DAG Topology ===

  ● [source] orders (line:5)
  │ [transform] classify (line:17)
  ◆ FORK [route:exclusive] 'classify_route' (line:25)
  ├──> high → high
  ├──> default → low
  │ [output] low (line:42)
  │ [output] high (line:34)
